--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "(784, 15)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "783    man        True  NaN   Queenstown    no   True  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "(784, 15)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "4    no   True  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "(784, 11)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "Name: alive, dtype: int64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "yes   1           323"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        "       Third     405"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
        "9        0          0  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
        "9          0  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1698,7 @@
        "4          0  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
        "Name: survived, Length: 784, dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1950,7 @@
        "[784 rows x 9 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1978,7 @@
        "DecisionTreeClassifier(random_state=100)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2099,7 @@
        "4       3    0      0      0   8.0500           1      1        1          0"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2124,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2143,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2237,7 +2237,7 @@
        "[784 rows x 1 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2248,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2257,7 @@
        "DecisionTreeClassifier(random_state=100)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2281,7 +2281,7 @@
        " Text(0.75, 0.25, 'gini = 0.306\\nsamples = 451\\nvalue = [366, 85]\\nclass = Died')]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2317,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2402,7 +2402,7 @@
        "Name: pclass, Length: 784, dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2423,7 @@
        "DecisionTreeClassifier(random_state=100)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2449,7 +2449,7 @@
        " Text(0.8, 0.5, 'gini = 0.382\\nsamples = 405\\nvalue = [301, 104]\\nclass = Died')]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2484,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2493,7 @@
        "array([1, 0])"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2513,7 @@
        "DecisionTreeClassifier(random_state=100)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2526,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2545,7 @@
        " Text(0.9, 0.125, 'gini = 0.241\\nsamples = 250\\nvalue = [215, 35]\\nclass = Died')]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2597,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2682,7 +2682,7 @@
        "max      1.000000  512.329200"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2702,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2713,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2735,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2746,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2757,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2799,7 +2799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2810,7 +2810,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2822,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2847,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2879,22 +2879,53 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Um modelo de função bom é aquele que explica bem os dados, um modelo Balanceado sem ser Underfiting ou Overfiting\n",
+    "- O Objetivo é ter um modelo mais generalista, sem ser muito específico para o conjunto de dados que temos em mão para poder classificar a chegada de um dado novo"
+   ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Overfitting Exemplo\n",
+    "\n",
+    "<img width='800px' src='datalake/Screenshot 2023-01-21 at 10.40.10.png'>"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Treino e Teste\n",
+    "\n",
+    "- Normalmente se utiliza 70% para treino e 30% do conjunto de dados para teste"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treino e Teste\n",
+    "\n",
+    "<img width='800px' src='datalake/Screenshot 2023-01-21 at 10.46.53.png'>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treinando o Modelo\n",
+    "\n",
+    "<img width='800px' src='datalake/Screenshot 2023-01-21 at 10.53.16.png'>\n"
+   ]
   }
  ],
  "metadata": {
@@ -2913,7 +2944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:53:17) \n[Clang 12.0.0 ]"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
