--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
@@ -2904,15 +2904,7 @@
    "source": [
     "### Treino e Teste\n",
     "\n",
-    "- Normalmente se utiliza 70% para treino e 30% do conjunto de dados para teste"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Treino e Teste\n",
+    "- Normalmente se utiliza 70% para treino e 30% do conjunto de dados para teste\n",
     "\n",
     "<img width='800px' src='datalake/Screenshot 2023-01-21 at 10.46.53.png'>"
    ]
@@ -2925,6 +2917,92 @@
     "### Treinando o Modelo\n",
     "\n",
     "<img width='800px' src='datalake/Screenshot 2023-01-21 at 10.53.16.png'>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Acurácio do conjunto de treino\n",
+    "\n",
+    "- acc = (soma da quantidade de acertos) / dividido pelo total\n",
+    "\n",
+    "<img width='800px' src='datalake/Screenshot 2023-01-21 at 11.01.18.png'>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Acurácia total = 0.8571428571428571\n",
+      "Acurácia aredondada = 0.86\n",
+      "Acurácia porcentagem = 86.00 %\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Medindo acurácia com dados de teste\n",
+    "\n",
+    "acc = (4 + 2) / (4 + 2 + 1)\n",
+    "print('''\n",
+    "Acurácia total = {}\n",
+    "Acurácia aredondada = {}\n",
+    "Acurácia porcentagem = {:.2f} %\n",
+    "'''.format(\n",
+    "        acc, \n",
+    "        round(acc, 2),\n",
+    "        round(acc, 2) * 100\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Acurácia total = 0.3333333333333333\n",
+      "Acurácia aredondada = 0.33\n",
+      "Acurácia porcentagem = 33.00 %\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Medindo acurácia com dados de treino\n",
+    "\n",
+    "acc = (1 + 0) / (1 + 2)\n",
+    "print('''\n",
+    "Acurácia total = {}\n",
+    "Acurácia aredondada = {}\n",
+    "Acurácia porcentagem = {:.2f} %\n",
+    "'''.format(\n",
+    "        acc, \n",
+    "        round(acc, 2),\n",
+    "        round(acc, 2) * 100\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A acurácia ficou muito diferente da anterior isso quer dizer que o modelo está muito overfitado"
    ]
   }
  ],
