--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_arvores_I.ipynb
@@ -4509,6 +4509,35 @@
     "    feature_names=x_train.columns\n",
     ")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7.9 Prós e Contras"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vantagens e Desvantagens\n",
+    "\n",
+    "- Vantagens\n",
+    "    - Simples de entender e interpretar. As árvores poder ser visualizadas.\n",
+    "    - Requer pouca preparação dos dados. Outras técnicas geralmente requerem normalização de dados, variáveis dummier (flag) precisam ser criadas e valores em branco precisam ser removidos.\n",
+    "    - Capaz de ligar com dados numéricos e categóricos. Outras técnicas geralmente são especializadas na análise de conjuntos de dados que possuem apenas um tipo de variável\n",
+    "    - Capaz de lidar com problemas de múltiplas saídas.\n",
+    "    - Usa um modelo de caixa branca. Se uma determinada situação é observável em um modelo, a explicação para a condição é fácilmente explicada pela lógica booleana. Por outro lado, em um modelo caixa preta (por exemplo, em uma rede neural), os resultados podem ser maais difíceis de interpretar.\n",
+    "\n",
+    "- Desvantagens\n",
+    "    - As árvores de decisão podem ser tão complexas que não generalizam bem os dados. Isso é chamado de overfiting. Mecanismos como pode, definir o número mínimo de amostras necessárias numa folha ou definir a profundidade máxima da árvore são necessários para evitar esse problema.\n",
+    "    - As árvores de decisão podem ser instáveis, pois pequenas variações nos dados podem resultar na geração de uma árvore completamente diferente.\n",
+    "    - As previsões daas árvores de decisão não são suaves nem contínuas. Portanto, eles não são bons em extrapolação.\n",
+    "    - As árvores de decisão podem ser enviesadas se algumas classes dominam no conjunto de dados. Portanto, é recomendável equilibrar o conjunto de dados antes de ajustá-lo à árvore de decisão"
+   ]
   }
  ],
  "metadata": {
