--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
@@ -24,19 +24,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m c \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39minput/demo01.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m c\u001b[39m.\u001b[39mhead()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>posse_de_veiculo</th>\n",
+       "      <th>posse_de_imovel</th>\n",
+       "      <th>qtd_filhos</th>\n",
+       "      <th>tipo_renda</th>\n",
+       "      <th>educacao</th>\n",
+       "      <th>estado_civil</th>\n",
+       "      <th>tipo_residencia</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>tempo_emprego</th>\n",
+       "      <th>possui_celular</th>\n",
+       "      <th>possui_fone_comercial</th>\n",
+       "      <th>possui_fone</th>\n",
+       "      <th>possui_email</th>\n",
+       "      <th>qt_pessoas_residencia</th>\n",
+       "      <th>mau</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Working</td>\n",
+       "      <td>Secondary / secondary special</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>House / apartment</td>\n",
+       "      <td>58.832877</td>\n",
+       "      <td>3.106849</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Commercial associate</td>\n",
+       "      <td>Secondary / secondary special</td>\n",
+       "      <td>Single / not married</td>\n",
+       "      <td>House / apartment</td>\n",
+       "      <td>52.356164</td>\n",
+       "      <td>8.358904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Commercial associate</td>\n",
+       "      <td>Secondary / secondary special</td>\n",
+       "      <td>Single / not married</td>\n",
+       "      <td>House / apartment</td>\n",
+       "      <td>52.356164</td>\n",
+       "      <td>8.358904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Working</td>\n",
+       "      <td>Higher education</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>House / apartment</td>\n",
+       "      <td>46.224658</td>\n",
+       "      <td>2.106849</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>F</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Working</td>\n",
+       "      <td>Incomplete higher</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>House / apartment</td>\n",
+       "      <td>29.230137</td>\n",
+       "      <td>3.021918</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sexo posse_de_veiculo posse_de_imovel  qtd_filhos            tipo_renda  \\\n",
+       "0    M                Y               Y           0               Working   \n",
+       "1    F                N               Y           0  Commercial associate   \n",
+       "2    F                N               Y           0  Commercial associate   \n",
+       "3    M                Y               Y           0               Working   \n",
+       "4    F                Y               N           0               Working   \n",
+       "\n",
+       "                        educacao          estado_civil    tipo_residencia  \\\n",
+       "0  Secondary / secondary special               Married  House / apartment   \n",
+       "1  Secondary / secondary special  Single / not married  House / apartment   \n",
+       "2  Secondary / secondary special  Single / not married  House / apartment   \n",
+       "3               Higher education               Married  House / apartment   \n",
+       "4              Incomplete higher               Married  House / apartment   \n",
+       "\n",
+       "       idade  tempo_emprego  possui_celular  possui_fone_comercial  \\\n",
+       "0  58.832877       3.106849               1                      0   \n",
+       "1  52.356164       8.358904               1                      0   \n",
+       "2  52.356164       8.358904               1                      0   \n",
+       "3  46.224658       2.106849               1                      1   \n",
+       "4  29.230137       3.021918               1                      0   \n",
+       "\n",
+       "   possui_fone  possui_email  qt_pessoas_residencia    mau  \n",
+       "0            0             0                    2.0  False  \n",
+       "1            1             1                    1.0  False  \n",
+       "2            1             1                    1.0  False  \n",
+       "3            1             1                    2.0  False  \n",
+       "4            0             0                    2.0  False  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
