--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
@@ -208,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(438557, 18)"
+       "(16650, 16)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,30 +248,28 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 438557 entries, 0 to 438556\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column               Non-Null Count   Dtype  \n",
-      "---  ------               --------------   -----  \n",
-      " 0   ID                   438557 non-null  int64  \n",
-      " 1   CODE_GENDER          438557 non-null  object \n",
-      " 2   FLAG_OWN_CAR         438557 non-null  object \n",
-      " 3   FLAG_OWN_REALTY      438557 non-null  object \n",
-      " 4   CNT_CHILDREN         438557 non-null  int64  \n",
-      " 5   AMT_INCOME_TOTAL     438557 non-null  float64\n",
-      " 6   NAME_INCOME_TYPE     438557 non-null  object \n",
-      " 7   NAME_EDUCATION_TYPE  438557 non-null  object \n",
-      " 8   NAME_FAMILY_STATUS   438557 non-null  object \n",
-      " 9   NAME_HOUSING_TYPE    438557 non-null  object \n",
-      " 10  DAYS_BIRTH           438557 non-null  int64  \n",
-      " 11  DAYS_EMPLOYED        438557 non-null  int64  \n",
-      " 12  FLAG_MOBIL           438557 non-null  int64  \n",
-      " 13  FLAG_WORK_PHONE      438557 non-null  int64  \n",
-      " 14  FLAG_PHONE           438557 non-null  int64  \n",
-      " 15  FLAG_EMAIL           438557 non-null  int64  \n",
-      " 16  OCCUPATION_TYPE      304354 non-null  object \n",
-      " 17  CNT_FAM_MEMBERS      438557 non-null  float64\n",
-      "dtypes: float64(2), int64(8), object(8)\n",
-      "memory usage: 60.2+ MB\n"
+      "RangeIndex: 16650 entries, 0 to 16649\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   sexo                   16650 non-null  object \n",
+      " 1   posse_de_veiculo       16650 non-null  object \n",
+      " 2   posse_de_imovel        16650 non-null  object \n",
+      " 3   qtd_filhos             16650 non-null  int64  \n",
+      " 4   tipo_renda             16650 non-null  object \n",
+      " 5   educacao               16650 non-null  object \n",
+      " 6   estado_civil           16650 non-null  object \n",
+      " 7   tipo_residencia        16650 non-null  object \n",
+      " 8   idade                  16650 non-null  float64\n",
+      " 9   tempo_emprego          16650 non-null  float64\n",
+      " 10  possui_celular         16650 non-null  int64  \n",
+      " 11  possui_fone_comercial  16650 non-null  int64  \n",
+      " 12  possui_fone            16650 non-null  int64  \n",
+      " 13  possui_email           16650 non-null  int64  \n",
+      " 14  qt_pessoas_residencia  16650 non-null  float64\n",
+      " 15  mau                    16650 non-null  bool   \n",
+      "dtypes: bool(1), float64(3), int64(5), object(7)\n",
+      "memory usage: 1.9+ MB\n"
      ]
     }
    ],
@@ -282,34 +280,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID                      0.000000\n",
-       "CODE_GENDER             0.000000\n",
-       "FLAG_OWN_CAR            0.000000\n",
-       "FLAG_OWN_REALTY         0.000000\n",
-       "CNT_CHILDREN            0.000000\n",
-       "AMT_INCOME_TOTAL        0.000000\n",
-       "NAME_INCOME_TYPE        0.000000\n",
-       "NAME_EDUCATION_TYPE     0.000000\n",
-       "NAME_FAMILY_STATUS      0.000000\n",
-       "NAME_HOUSING_TYPE       0.000000\n",
-       "DAYS_BIRTH              0.000000\n",
-       "DAYS_EMPLOYED           0.000000\n",
-       "FLAG_MOBIL              0.000000\n",
-       "FLAG_WORK_PHONE         0.000000\n",
-       "FLAG_PHONE              0.000000\n",
-       "FLAG_EMAIL              0.000000\n",
-       "OCCUPATION_TYPE        30.601039\n",
-       "CNT_FAM_MEMBERS         0.000000\n",
+       "sexo                     0.0\n",
+       "posse_de_veiculo         0.0\n",
+       "posse_de_imovel          0.0\n",
+       "qtd_filhos               0.0\n",
+       "tipo_renda               0.0\n",
+       "educacao                 0.0\n",
+       "estado_civil             0.0\n",
+       "tipo_residencia          0.0\n",
+       "idade                    0.0\n",
+       "tempo_emprego            0.0\n",
+       "possui_celular           0.0\n",
+       "possui_fone_comercial    0.0\n",
+       "possui_fone              0.0\n",
+       "possui_email             0.0\n",
+       "qt_pessoas_residencia    0.0\n",
+       "mau                      0.0\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -328,14 +325,324 @@
     "\n",
     "1. Crie um dataframe com os nomes de cada variável e o tipo de dados de cada variável.\n",
     "2. Adicione uma coluna nesse *dataframe* chamada \"qtd_categorias\" e coloque nela o número de categorias correspondente de cada variável. \n",
-    "    Dica: \n",
-    "        1. inicie uma lista vazia\n",
-    "        2. faça um for ao longo dos nomes das variáveis, \n",
-    "        3. conte o número de categorias dessa variável \n",
-    "        4. acumule essa informação de 3. na lista que você criou em 1. \n",
-    "        5. No final, essa lista pode ser atribuída à nossa variável.\n",
+    "    1. inicie uma lista vazia\n",
+    "    2. faça um for ao longo dos nomes das variáveis, \n",
+    "    3. conte o número de categorias dessa variável \n",
+    "    4. acumule essa informação de 3. na lista que você criou em 1. \n",
+    "    5. No final, essa lista pode ser atribuída à nossa variável.\n",
     "3. Crie variáveis dummy para as variáveis necessárias (i.e. aquelas que são qualitativas e não estão armazenadas como {0, 1} ou {True, False}."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dict = {c[col].name: [c[col].dtypes.name] for col in c.columns}\n",
+    "\n",
+    "df_meta = pd.DataFrame(data_dict)\n",
+    "df_meta = df_meta.transpose()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sexo\n",
+      "posse_de_veiculo\n",
+      "posse_de_imovel\n",
+      "qtd_filhos\n",
+      "tipo_renda\n",
+      "educacao\n",
+      "estado_civil\n",
+      "tipo_residencia\n",
+      "idade\n",
+      "tempo_emprego\n",
+      "possui_celular\n",
+      "possui_fone_comercial\n",
+      "possui_fone\n",
+      "possui_email\n",
+      "qt_pessoas_residencia\n",
+      "mau\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df_meta.index:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sexo</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>posse_de_veiculo</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>posse_de_imovel</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qtd_filhos</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tipo_renda</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>educacao</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>estado_civil</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tipo_residencia</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>idade</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tempo_emprego</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_celular</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_fone_comercial</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_fone</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_email</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qt_pessoas_residencia</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mau</th>\n",
+       "      <td>bool</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             0\n",
+       "index                        0\n",
+       "sexo                    object\n",
+       "posse_de_veiculo        object\n",
+       "posse_de_imovel         object\n",
+       "qtd_filhos               int64\n",
+       "tipo_renda              object\n",
+       "educacao                object\n",
+       "estado_civil            object\n",
+       "tipo_residencia         object\n",
+       "idade                  float64\n",
+       "tempo_emprego          float64\n",
+       "possui_celular           int64\n",
+       "possui_fone_comercial    int64\n",
+       "possui_fone              int64\n",
+       "possui_email             int64\n",
+       "qt_pessoas_residencia  float64\n",
+       "mau                       bool"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_meta\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sexo</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>posse_de_veiculo</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>posse_de_imovel</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qtd_filhos</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tipo_renda</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>educacao</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>estado_civil</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tipo_residencia</th>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>idade</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tempo_emprego</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_celular</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_fone_comercial</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_fone</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>possui_email</th>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qt_pessoas_residencia</th>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mau</th>\n",
+       "      <td>bool</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             0\n",
+       "sexo                    object\n",
+       "posse_de_veiculo        object\n",
+       "posse_de_imovel         object\n",
+       "qtd_filhos               int64\n",
+       "tipo_renda              object\n",
+       "educacao                object\n",
+       "estado_civil            object\n",
+       "tipo_residencia         object\n",
+       "idade                  float64\n",
+       "tempo_emprego          float64\n",
+       "possui_celular           int64\n",
+       "possui_fone_comercial    int64\n",
+       "possui_fone              int64\n",
+       "possui_email             int64\n",
+       "qt_pessoas_residencia  float64\n",
+       "mau                       bool"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
