--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4            0             0                    2.0  False  "
       ]
      },
-     "execution_count": 256,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "(16650, 16)"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "3     bool    1"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "15                    mau     bool    1"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "<AxesSubplot:xlabel='possui_email', ylabel='count'>"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "<AxesSubplot:xlabel='posse_de_veiculo', ylabel='count'>"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        "1              1450    30"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "1                  6329   143"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
        "1                 0.977905  0.022095"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "1             0.979730  0.020270"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1062,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_enc.to_csv('./input/demo02.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1396,7 @@
        "[16650 rows x 17 columns]"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
