--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_I.ipynb
@@ -1062,11 +1062,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_enc.to_csv('./input/demo02.csv')"
+    "c_enc.to_csv('./input/demo02.csv', index=None)"
    ]
   },
   {
