--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_II.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_7_exercicios_II.ipynb
@@ -15,6 +15,355 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>posse_de_veiculo</th>\n",
+       "      <th>posse_de_imovel</th>\n",
+       "      <th>qtd_filhos</th>\n",
+       "      <th>tipo_renda</th>\n",
+       "      <th>educacao</th>\n",
+       "      <th>estado_civil</th>\n",
+       "      <th>tipo_residencia</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>tempo_emprego</th>\n",
+       "      <th>possui_celular</th>\n",
+       "      <th>possui_fone_comercial</th>\n",
+       "      <th>possui_fone</th>\n",
+       "      <th>possui_email</th>\n",
+       "      <th>qt_pessoas_residencia</th>\n",
+       "      <th>mau</th>\n",
+       "      <th>sexo_F</th>\n",
+       "      <th>sexo_M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58.832877</td>\n",
+       "      <td>3.106849</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52.356164</td>\n",
+       "      <td>8.358904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52.356164</td>\n",
+       "      <td>8.358904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46.224658</td>\n",
+       "      <td>2.106849</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29.230137</td>\n",
+       "      <td>3.021918</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16645</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54.109589</td>\n",
+       "      <td>9.884932</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16646</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>43.389041</td>\n",
+       "      <td>7.380822</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16647</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.005479</td>\n",
+       "      <td>9.800000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16648</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.005479</td>\n",
+       "      <td>9.800000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16649</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.936986</td>\n",
+       "      <td>3.630137</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16650 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       posse_de_veiculo  posse_de_imovel  qtd_filhos  tipo_renda  educacao  \\\n",
+       "0                     1                1           0           0         0   \n",
+       "1                     0                1           0           1         0   \n",
+       "2                     0                1           0           1         0   \n",
+       "3                     1                1           0           0         1   \n",
+       "4                     1                0           0           0         2   \n",
+       "...                 ...              ...         ...         ...       ...   \n",
+       "16645                 0                1           0           0         0   \n",
+       "16646                 0                1           0           1         0   \n",
+       "16647                 1                1           0           0         0   \n",
+       "16648                 1                1           0           0         0   \n",
+       "16649                 0                1           0           3         1   \n",
+       "\n",
+       "       estado_civil  tipo_residencia      idade  tempo_emprego  \\\n",
+       "0                 0                0  58.832877       3.106849   \n",
+       "1                 1                0  52.356164       8.358904   \n",
+       "2                 1                0  52.356164       8.358904   \n",
+       "3                 0                0  46.224658       2.106849   \n",
+       "4                 0                0  29.230137       3.021918   \n",
+       "...             ...              ...        ...            ...   \n",
+       "16645             2                0  54.109589       9.884932   \n",
+       "16646             0                0  43.389041       7.380822   \n",
+       "16647             0                0  30.005479       9.800000   \n",
+       "16648             0                0  30.005479       9.800000   \n",
+       "16649             0                0  33.936986       3.630137   \n",
+       "\n",
+       "       possui_celular  possui_fone_comercial  possui_fone  possui_email  \\\n",
+       "0                   1                      0            0             0   \n",
+       "1                   1                      0            1             1   \n",
+       "2                   1                      0            1             1   \n",
+       "3                   1                      1            1             1   \n",
+       "4                   1                      0            0             0   \n",
+       "...               ...                    ...          ...           ...   \n",
+       "16645               1                      0            0             0   \n",
+       "16646               1                      1            1             0   \n",
+       "16647               1                      1            0             0   \n",
+       "16648               1                      1            0             0   \n",
+       "16649               1                      0            1             1   \n",
+       "\n",
+       "       qt_pessoas_residencia    mau  sexo_F  sexo_M  \n",
+       "0                        2.0  False       0       1  \n",
+       "1                        1.0  False       1       0  \n",
+       "2                        1.0  False       1       0  \n",
+       "3                        2.0  False       0       1  \n",
+       "4                        2.0  False       1       0  \n",
+       "...                      ...    ...     ...     ...  \n",
+       "16645                    2.0   True       1       0  \n",
+       "16646                    2.0   True       1       0  \n",
+       "16647                    2.0   True       0       1  \n",
+       "16648                    2.0   True       0       1  \n",
+       "16649                    2.0   True       1       0  \n",
+       "\n",
+       "[16650 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = pd.read_csv('input/demo02.csv')\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -63,7 +412,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -77,11 +426,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "52b7bb1e00b7e6fe31684b0b5bbf78cf5f147fecd4fff7207dfeb641ef9c416a"
    }
   }
  },
